# student_seat_system

./: .Makefile.swo  .Makefile.swp  .build_gtest.sh.swp  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.swp  .main.c.swp  CMakeLists.txt  Makefile  README.md  build_gtest.sh  main.c  main.cxx  main_system_build.sh  project_function.h  test  test_exe
doxy/: Doxyfile  mainpage.md
doxy/doxy_documentation/html/: annotated.html  classes.html  dir_000002_000001.html  dir_00f5881ae7c96402e9b66030668646f3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  menudata.js  project__function_8h.html  project__function_8h__dep__incl.dot  project__function_8h__incl.dot  project__function_8h_source.html  structCell-members.html  structCell.html  structClassroom-members.html  structClassroom.html  structClassroom__coll__graph.dot  structStudent-members.html  structStudent.html  structStudentEntry-members.html  structStudentEntry.html  structStudentEntry__coll__graph.dot  structStudent__coll__graph.dot  structWidget-members.html  structWidget.html  user__interface_8c.html  user__interface_8c__incl.dot
doxy/doxy_documentation/latex/: annotated.tex  files.tex  index.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  md_mainpage.tex  project__function_8h.tex  project__function_8h.tex.tmp  project__function_8h__dep__incl.dot  project__function_8h__incl.dot  refman.tex  structCell.tex  structClassroom.tex  structClassroom__coll__graph.dot  structStudent.tex  structStudentEntry.tex  structStudentEntry__coll__graph.dot  structStudent__coll__graph.dot  structWidget.tex  user__interface_8c.tex  (+1 more)
gcov_module/: codecoverage.cmake
googletest/: CMakeLists.txt
inc/: project_function.h
src/: main.c  theme.css  user_interface.c
testing/: CMakeLists.txt  Makefile  test.cxx  user_interface.gcno
(+30 files in other folders)
